stop youtube video too wide on narrow devices

--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ address {
   font-style: normal;
 }
 
+iframe,
 img {
   max-width: 100%;
 }
